# Uni-Mol

./: .readthedocs.yml  LICENSE  README.md  requirements.txt  setup.py
.circleci/: config.yaml
docker/: Dockerfile
docs/: requirements.txt
notebooks/: unimol_binding_pose_demo.ipynb  unimol_mol_property_demo.ipynb  unimol_mol_repr_demo.ipynb
unimol/: README.md  __init__.py  conf_gen_cal_metrics.py  conf_gen_infer.py  infer.py  pyproject.toml  requirements.txt  setup.py
unimol/data/: __init__.py  add_2d_conformer_dataset.py  atom_type_dataset.py  conformer_sample_dataset.py  coord_pad_dataset.py  cropping_dataset.py  distance_dataset.py  from_str_dataset.py  lmdb_dataset.py  mask_points_dataset.py  normalize_dataset.py  prepend_and_append_2d_dataset.py  remove_hydrogen_dataset.py  tta_dataset.py
unimol/docker/: Dockerfile
unimol/example_data/pocket/: dict_coarse.txt
unimol/losses/: conf_gen.py  cross_entropy.py  docking_pose.py  reg_loss.py  unimol.py
unimol/models/: __init__.py  conf_gen.py  docking_pose.py  transformer_encoder_with_pair.py  unimol.py
unimol/notebooks/: mol_property_demo.csv  unimol_binding_pose_demo.ipynb  unimol_mol_repr_demo.ipynb  unimol_pocket_repr_demo.ipynb  unimol_posebuster_demo.ipynb
unimol/tasks/: docking_pose.py  unimol.py  unimol_conf_gen.py  unimol_finetune.py  unimol_pocket.py  unimol_pocket_finetune.py
unimol/unimol/: __init__.py  infer.py
unimol/unimol/data/: conformer_sample_dataset.py  cropping_dataset.py  data_utils.py  key_dataset.py  mask_points_dataset.py  normalize_dataset.py  tta_dataset.py
unimol/unimol/losses/: conf_gen.py  cross_entropy.py  docking_pose.py  reg_loss.py  unimol.py
unimol/unimol/models/: __init__.py  conf_gen.py  docking_pose.py  transformer_encoder_with_pair.py  unimol.py
unimol/unimol/tasks/: docking_pose.py  unimol.py  unimol_finetune.py  unimol_pocket.py  unimol_pocket_finetune.py
unimol/unimol/utils/: conf_gen_cal_metrics.py  conformer_model.py  coordinate_model.py  docking.py  docking_utils.py
unimol/utils/: coordinate_model.py  docking.py  docking_utils.py
unimol2/: README.md  (+1 more)
unimol_tools/: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
unimol_tools/docs/source/: command.rst  conf.py  examples.rst  features.rst  index.rst  installation.rst  practices.rst  web.rst
unimol_tools/unimol_tools/: __init__.py  predict.py  predictor.py  train.py
unimol_tools/unimol_tools/config/: __init__.py  default.yaml  model_config.py
unimol_tools/unimol_tools/data/: __init__.py  conformer.py  datahub.py  datareader.py  datascaler.py  dictionary.py  split.py
unimol_tools/unimol_tools/models/: __init__.py  loss.py  nnmodel.py  transformers.py  transformersv2.py  unimol.py  unimolv2.py
unimol_tools/unimol_tools/tasks/: split.py  trainer.py
unimol_tools/unimol_tools/utils/: __init__.py  base_logger.py  config_handler.py  metrics.py  util.py
unimol_tools/unimol_tools/weights/: __init__.py  mof.dict.txt  oled.dict.txt  weighthub.py
(+121 files in other folders)
